@@ -267,11 +267,10 @@ function dnsrequest(remoteaddress, dnspacket, shortname) {
         dnspacket.addsCNAMErecord('answer', dnspacket.name, cdnboxstate.config.hostname + '.');
         answerdata += 'CNAME ' + cdnboxstate.config.hostname + '. ';
       }
-      // authority (must be second)
-      if (dnspacket.qtype == cdnboxDNSPacket.QTYPE.AAAA && !cdnboxstate.ipv6 &&
-          !cdnboxstate.config.cname) {
-        dnspacket.addsSOArecord('authority', conf.dnsserver.domain + '.', cbs[nslist[0]].hostname + '.');
-        answerdata += 'SOA-Auth ';
+      // authority (must be second), force NODATA type 2 (rfc)
+      if (dnspacket.anum == 0 || dnspacket.qtype == cdnboxDNSPacket.QTYPE.ANY) { 
+          dnspacket.addsSOArecord('authority', conf.dnsserver.domain + '.', cbs[nslist[0]].hostname  + '.');
+          answerdata += 'SOA-Auth ';
       }
       if (dnspacket.qtype == cdnboxDNSPacket.QTYPE.A || dnspacket.qtype == cdnboxDNSPacket.QTYPE.AAAA || 
           dnspacket.qtype == cdnboxDNSPacket.QTYPE.CNAME) {
@@ -287,18 +286,11 @@ function dnsrequest(remoteaddress, dnspacket, shortname) {
           answerdata += 'NS ' + cbs[nslist[i]].hostname  + '. ';
         }
       }
+      log += ', "adata": "' + answerdata + '", "cdnbox": "' + boxname + '" ';
     } else {
-      if (dnspacket.qtype == cdnboxDNSPacket.QTYPE.A || dnspacket.qtype == cdnboxDNSPacket.QTYPE.AAAA) { 
-        dnspacket.addsSOArecord('authority', conf.dnsserver.domain + '.', cbs[nslist[0]].hostname  + '.');
-        answerdata += 'SOA-Auth ';
-      }
+      dnspacket.setresponsecode(cdnboxDNSPacket.RCODE.NXDOMAIN);
+      log = ', "error": "' + reqname + ' unknow." ';
     }
-    if (dnspacket.qtype == cdnboxDNSPacket.QTYPE.SOA || dnspacket.qtype == cdnboxDNSPacket.QTYPE.ANY ||
-        dnspacket.qtype == cdnboxDNSPacket.QTYPE.NS) { 
-        dnspacket.addsSOArecord('authority', conf.dnsserver.domain + '.', cbs[nslist[0]].hostname  + '.');
-        answerdata += 'SOA Auth';
-    }
-    log += ', "adata": "' + answerdata + '", "cdnbox": "' + boxname + '" ';
   } else if (reqname == conf.dnsserver.domain) {
     var nslist = getnslist(country);
     if (dnspacket.qtype == cdnboxDNSPacket.QTYPE.NS || dnspacket.qtype == cdnboxDNSPacket.QTYPE.ANY) {
