@@ -376,6 +376,7 @@ cdnboxDNSPacket.QTYPE = {
   RKEY: 57,
   TALINK: 58,
   CDS: 59,
+  HTTPS: 65,
   SPF: 99,
   UINFO: 100,
   UID: 101,
