@@ -58,7 +58,8 @@ function choose(reqname, country, shortname) {
           continents.indexOf(country.continent.code) == -1) continue;
     } else if (countries != "ALL" && country !== null && 
 	       country.country && countries.indexOf(country.country.iso_code) == -1 &&
-	       country.continent && continents.indexOf(country.continent.code) == -1) {
+	       (continents === undefined || 
+		(country.continent && continents.indexOf(country.continent.code) == -1))) {
       continue;
     }
   
